Aligned drag-and-drop rows in question. Fixed bug of duplicate element id's in document.

--- a/static/main.css
+++ b/static/main.css
@@ -168,6 +168,7 @@ body {
     border-radius: 5px;
     width: 300px;
     height: 50px;
+    margin-right:50px;
 }
 
 
@@ -189,7 +190,7 @@ body {
     width: 100%;
 }
 
-.drop-row {
+.drag-drop-row {
     display: flex;
     justify-content: center;
     align-items: center;
